[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Chinese_llava"
version = "1.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numpy", "requests", "sentencepiece",
    "pillow", "regex",
    "protobuf", "accelerate==0.21.0",
    "scikit-learn==1.2.2",
    "tokenizers>=0.12.1",
    "torch", "torchvision",
    "transformers==4.31.0",
    "sentencepiece==0.1.99",
]

[project.urls]
"Homepage" = "https://github.com/LinkSoul-AI/Chinese-LLaVA"
"Bug Tracker" = "https://github.com/LinkSoul-AI/Chinese-LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
